GNOME Bugzilla – Bug 726830
'New messages' emblems on folder icons keep appearing and disappearing
Last modified: 2014-03-25 12:41:33 UTC
evolution-3.11.92-1.fc21.x86_64 I noticed today - don't know how long it's been going on, it's quite subtle - that the little yellow star emblem that's super-imposed on folder icons in the folder tree view to indicate 'new messages since you last looked in this folder' keeps appearing and disappearing as I move the mouse over the folder list. See attached video.
Created attachment 272570 [details] video illustrating the problem You can see the emblem on the qe-dept-list folder appearing and disappearing in this video. If more folders 'qualified' for an emblem at the time I took the video, you'd see it happening on more of them.
I can kinda sorta play the video, but it would be helpful if you could reduce your window size to something I can actually fit on my screen (1920x1080).
Created attachment 272584 [details] lower-resolution video displaying the bug
Okay that's better, thanks. Weird though. Also not seeing it here, but could be some subtle behavior change in a more recent GTK. Guess it's time to fire up the Rawhide VM...
Yeah, it's a behavior change in GTK 3.11.9 caused by this commit: https://git.gnome.org/browse/gtk+/commit/?id=faba7df4fea6cd09470b3b2cc277c35e6cf7c380 Some kind of subtle side-effect I guess; the commit looks innocent enough. Not yet sure if GTK needs patched or if Evolution needs patched. I'll try and figure this out. CC'ing Cosimo though since it's his commit.
Hmm, I fail to immediately see how that commit relates to the behavior in the video. Will try to reproduce in my JHBuild environment too.
Created attachment 272699 [details] [review] GtkIconTheme patch I don't understand why, but through sheer trial and error this seems to fix it. Reassigning to GTK.
Created attachment 272701 [details] [review] Reproducer Aid Cosimo, here's the patch I was using to help reproduce this in Evolution. It makes it easier to trigger the "new mail" emblem by just clicking around in Evolution's folder tree.
Created attachment 272824 [details] a testcase
Created attachment 272825 [details] [review] the fix
*** Bug 727006 has been marked as a duplicate of this bug. ***